// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return 1 expense if no 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
         
        1
      </span>
       
      expense
       totaling 
      <span>
        $2.35
         
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Create Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should return 2 expenses if multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
         
        2
      </span>
       
      expenses
       totaling 
      <span>
        $2.35
         
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Create Expense
      </Link>
    </div>
  </div>
</div>
`;
